--- a/src/main/resources/agregarpregunta.fxml
+++ b/src/main/resources/agregarpregunta.fxml
@@ -5,10 +5,11 @@
 
 <AnchorPane xmlns:fx="http://javafx.com/fxml"
             fx:controller="com.example.bd_edu.controllers.AgregarPreguntaController"
-            prefHeight="400.0" prefWidth="500.0">
+            prefHeight="400.0" prefWidth="500.0"
+            stylesheets="@estilos.css">
 
     <VBox spacing="15" AnchorPane.topAnchor="10" AnchorPane.leftAnchor="10" AnchorPane.rightAnchor="10">
-        <Label text="Agregar Nueva Pregunta" style="-fx-font-size: 18px; -fx-font-weight: bold;"/>
+        <Label text="Agregar Nueva Pregunta" styleClass="label-titulo"/>
 
         <TextArea fx:id="preguntaTextArea" promptText="Escriba el texto de la pregunta" prefHeight="100"/>
 
@@ -16,9 +17,9 @@
 
         <TextField fx:id="porcentajeField" promptText="Porcentaje de la nota (Ej: 25)"/>
 
-        <Button fx:id="guardarButton" text="Guardar Pregunta" onAction="#guardarPregunta"/>
+        <Button fx:id="guardarButton" text="Guardar Pregunta" onAction="#guardarPregunta" styleClass="button"/>
 
-        <Button fx:id="volverButton" text="Regresar" onAction="#volver"/>
+        <Button fx:id="volverButton" text="Regresar" onAction="#volver" styleClass="boton-regresar"/>
 
     </VBox>
 </AnchorPane>
