--- a/src/main/resources/menuestudiante.fxml
+++ b/src/main/resources/menuestudiante.fxml
@@ -5,7 +5,8 @@
 
 <AnchorPane xmlns:fx="http://javafx.com/fxml"
             fx:controller="com.example.bd_edu.controllers.MenuEstudianteController"
-            prefHeight="400.0" prefWidth="600.0">
+            prefHeight="400.0" prefWidth="600.0"
+            stylesheets="@estilos.css">
 
     <VBox spacing="20"
           AnchorPane.topAnchor="10"
@@ -14,20 +15,23 @@
           AnchorPane.bottomAnchor="10">
 
         <Label text="Menú Estudiante"
-               style="-fx-font-size: 18px; -fx-font-weight: bold;"/>
+               styleClass="label-titulo"/>
 
         <Button fx:id="verExamenesButton"
                 text="Ver Exámenes Disponibles"
-                onAction="#verExamenes"/>
+                onAction="#verExamenes"
+                styleClass="button"/>
 
         <Button fx:id="verEstadisticasButton"
                 text="Ver Estadísticas"
-                onAction="#verEstadisticas"/>
+                onAction="#verEstadisticas"
+                styleClass="button"/>
 
         <Button fx:id="verHorarioButton"
                 text="Ver Horario"
-                onAction="#verHorario"/>
+                onAction="#verHorario"
+                styleClass="button"/>
 
-        <Button fx:id="volverButton" text="Salir" onAction="#volver"/>
+        <Button fx:id="volverButton" text="Salir" onAction="#volver" styleClass="boton-regresar"/>
     </VBox>
 </AnchorPane>
