--- a/src/main/resources/estadisticas.fxml
+++ b/src/main/resources/estadisticas.fxml
@@ -5,12 +5,21 @@
 
 <AnchorPane xmlns:fx="http://javafx.com/fxml"
             fx:controller="com.example.bd_edu.controllers.EstadisticasController"
-            prefHeight="500.0" prefWidth="800.0">
+            prefHeight="500.0" prefWidth="800.0"
+            stylesheets="@estilos.css">
 
-    <VBox spacing="15" AnchorPane.topAnchor="10" AnchorPane.leftAnchor="10" AnchorPane.rightAnchor="10" AnchorPane.bottomAnchor="10">
-        <Label text="Estadísticas de Exámenes" style="-fx-font-size: 18px; -fx-font-weight: bold;"/>
+    <VBox spacing="15"
+          AnchorPane.topAnchor="10"
+          AnchorPane.leftAnchor="10"
+          AnchorPane.rightAnchor="10"
+          AnchorPane.bottomAnchor="10">
 
-        <TableView fx:id="tablaEstadisticas" prefHeight="400">
+        <Label text="Estadísticas de Exámenes"
+               styleClass="label-titulo"/>
+
+        <TableView fx:id="tablaEstadisticas"
+                   prefHeight="400"
+                   styleClass="table-view">
             <columns>
                 <TableColumn fx:id="colNombre" text="Estudiante"/>
                 <TableColumn fx:id="colGrupo" text="Grupo"/>
@@ -21,8 +30,13 @@
             </columns>
         </TableView>
 
-        <Label fx:id="labelResumen" text="Promedio general: -" />
+        <Label fx:id="labelResumen"
+               text="Promedio general: -"
+               styleClass="label"/>
 
-        <Button fx:id="volverButton" text="Regresar" onAction="#volver"/>
+        <Button fx:id="volverButton"
+                text="Regresar"
+                onAction="#volver"
+                styleClass="boton-regresar"/>
     </VBox>
 </AnchorPane>
