--- a/src/main/resources/horario.fxml
+++ b/src/main/resources/horario.fxml
@@ -5,20 +5,21 @@
 
 <AnchorPane xmlns:fx="http://javafx.com/fxml"
             fx:controller="com.example.bd_edu.controllers.HorarioController"
-            prefHeight="400.0" prefWidth="600.0">
+            prefHeight="400.0" prefWidth="600.0"
+            stylesheets="@estilos.css">
 
     <VBox spacing="15" AnchorPane.topAnchor="10" AnchorPane.leftAnchor="10" AnchorPane.rightAnchor="10" AnchorPane.bottomAnchor="10">
-        <Label text="Horario de Clases" style="-fx-font-size: 18px; -fx-font-weight: bold;"/>
+        <Label text="Horario de Clases" styleClass="label-titulo"/>
 
-        <TableView fx:id="tablaHorario" prefHeight="350">
+        <TableView fx:id="tablaHorario" prefHeight="350" styleClass="table-view">
             <columns>
-                <TableColumn fx:id="colDia" text="Día" />
-                <TableColumn fx:id="colHora" text="Hora" />
-                <TableColumn fx:id="colMateria" text="Materia" />
-                <TableColumn fx:id="colAula" text="Aula" />
+                <TableColumn fx:id="colDia" text="Día"/>
+                <TableColumn fx:id="colHora" text="Hora"/>
+                <TableColumn fx:id="colMateria" text="Materia"/>
+                <TableColumn fx:id="colAula" text="Aula"/>
             </columns>
         </TableView>
 
-        <Button fx:id="volverButton" text="Regresar" onAction="#volver"/>
+        <Button fx:id="volverButton" text="Regresar" onAction="#volver" styleClass="boton-regresar"/>
     </VBox>
 </AnchorPane>
