--- a/src/main/resources/programarexamen.fxml
+++ b/src/main/resources/programarexamen.fxml
@@ -5,7 +5,8 @@
 
 <AnchorPane xmlns:fx="http://javafx.com/fxml"
             fx:controller="com.example.bd_edu.controllers.ProgramarExamenController"
-            prefWidth="600.0" prefHeight="400.0">
+            prefWidth="600.0" prefHeight="400.0"
+            stylesheets="@app.css">
 
     <VBox spacing="15"
           AnchorPane.topAnchor="10"
@@ -13,31 +14,49 @@
           AnchorPane.rightAnchor="10"
           AnchorPane.bottomAnchor="10">
 
+        <!-- Título -->
         <Label text="Programar Examen"
-               style="-fx-font-size: 18px; -fx-font-weight: bold;"/>
+               styleClass="label-titulo"/>
 
+        <!-- Selección de examen -->
         <HBox spacing="10" alignment="CENTER_LEFT">
             <Label text="Examen:"/>
-            <ComboBox fx:id="examenCombo" promptText="Seleccione examen"/>
+            <ComboBox fx:id="examenCombo"
+                      promptText="Seleccione examen"
+                      styleClass="combo-box"/>
         </HBox>
 
+        <!-- Fecha -->
         <HBox spacing="10" alignment="CENTER_LEFT">
             <Label text="Fecha:"/>
-            <DatePicker fx:id="fechaPicker"/>
+            <DatePicker fx:id="fechaPicker"
+                        styleClass="text-field"/>
         </HBox>
 
+        <!-- Hora -->
         <HBox spacing="10" alignment="CENTER_LEFT">
             <Label text="Hora:"/>
-            <Spinner fx:id="horaSpinner" prefWidth="80"/>
+            <Spinner fx:id="horaSpinner"
+                     prefWidth="80"
+                     styleClass="spinner"/>
             <Label text=":"/>
-            <Spinner fx:id="minutoSpinner" prefWidth="80"/>
+            <Spinner fx:id="minutoSpinner"
+                     prefWidth="80"
+                     styleClass="spinner"/>
         </HBox>
 
+        <!-- Botón principal -->
         <Button fx:id="programarButton"
                 text="Programar Examen"
                 onAction="#programarExamen"
-                maxWidth="Infinity"/>
+                maxWidth="Infinity"
+                styleClass="button"/>
 
-        <Button fx:id="volverButton" text="Regresar" onAction="#volver"/>
+        <!-- Botón de regreso -->
+        <Button fx:id="volverButton"
+                text="Regresar"
+                onAction="#volver"
+                styleClass="boton-regresar"/>
+
     </VBox>
 </AnchorPane>
