--- a/src/main/resources/verbancopreguntas.fxml
+++ b/src/main/resources/verbancopreguntas.fxml
@@ -1,28 +1,38 @@
 <?xml version="1.0" encoding="UTF-8"?>
-
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
 <AnchorPane xmlns:fx="http://javafx.com/fxml"
             fx:controller="com.example.bd_edu.controllers.VerBancoPreguntasController"
-            prefWidth="800.0" prefHeight="500.0">
+            prefWidth="800.0" prefHeight="500.0"
+            stylesheets="@estilos.css">
 
     <VBox spacing="10"
-          AnchorPane.topAnchor="10" AnchorPane.leftAnchor="10"
-          AnchorPane.rightAnchor="10" AnchorPane.bottomAnchor="10">
-        <Label text="Banco de Preguntas" style="-fx-font-size: 18px; -fx-font-weight: bold;"/>
+          AnchorPane.topAnchor="10"
+          AnchorPane.leftAnchor="10"
+          AnchorPane.rightAnchor="10"
+          AnchorPane.bottomAnchor="10">
 
+        <!-- Título -->
+        <Label text="Banco de Preguntas"
+               styleClass="label-titulo"/>
+
+        <!-- Tabla de preguntas -->
         <TableView fx:id="tablaPreguntas" prefHeight="440">
             <columns>
-                <TableColumn fx:id="colId" text="ID" prefWidth="50"/>
-                <TableColumn fx:id="colTexto" text="Texto de la Pregunta" prefWidth="300"/>
-                <TableColumn fx:id="colTipo" text="Tipo" prefWidth="120"/>
-                <TableColumn fx:id="colPorcentaje" text="&#37; Nota" prefWidth="80"/>
-                <TableColumn fx:id="colAutor" text="Autor" prefWidth="150"/>
-                <TableColumn fx:id="colPublica" text="Pública" prefWidth="80"/>
+                <TableColumn fx:id="colId"          text="ID"               prefWidth="50"/>
+                <TableColumn fx:id="colTexto"       text="Texto de la Pregunta" prefWidth="300"/>
+                <TableColumn fx:id="colTipo"        text="Tipo"             prefWidth="120"/>
+                <TableColumn fx:id="colPorcentaje"  text="&#37; Nota"        prefWidth="80"/>
+                <TableColumn fx:id="colAutor"       text="Autor"            prefWidth="150"/>
+                <TableColumn fx:id="colPublica"     text="Pública"          prefWidth="80"/>
             </columns>
         </TableView>
 
-        <Button fx:id="volverButton" text="Regresar" onAction="#volver"/>
+        <!-- Botón de regresar -->
+        <Button fx:id="volverButton"
+                text="Regresar"
+                onAction="#volver"
+                styleClass="boton-regresar"/>
     </VBox>
 </AnchorPane>
