--- a/src/main/resources/ventanas/presentarexamen.fxml
+++ b/src/main/resources/ventanas/presentarexamen.fxml
@@ -6,7 +6,7 @@
 <AnchorPane xmlns:fx="http://javafx.com/fxml"
             fx:controller="com.example.bd_edu.controllers.PresentarExamenController"
             prefHeight="600.0" prefWidth="800.0"
-            stylesheets="@estilos.css">
+            stylesheets="@../estilos.css">
 
     <VBox spacing="20"
           AnchorPane.topAnchor="10"
