--- a/src/main/resources/ventanas/crearquiz.fxml
+++ b/src/main/resources/ventanas/crearquiz.fxml
@@ -6,7 +6,7 @@
 <AnchorPane xmlns:fx="http://javafx.com/fxml"
             fx:controller="com.example.bd_edu.controllers.CrearQuizController"
             prefHeight="500.0" prefWidth="500.0"
-            stylesheets="@estilos.css">
+            stylesheets="@../estilos.css">
 
     <VBox spacing="10" AnchorPane.topAnchor="10" AnchorPane.leftAnchor="10" AnchorPane.rightAnchor="10">
         <Label text="Crear Nuevo Quiz" styleClass="label-titulo"/>
