--- a/src/main/resources/ventanas/horario.fxml
+++ b/src/main/resources/ventanas/horario.fxml
@@ -6,7 +6,7 @@
 <AnchorPane xmlns:fx="http://javafx.com/fxml"
             fx:controller="com.example.bd_edu.controllers.HorarioController"
             prefHeight="400.0" prefWidth="600.0"
-            stylesheets="@estilos.css">
+            stylesheets="@../estilos.css">
 
     <VBox spacing="15" AnchorPane.topAnchor="10" AnchorPane.leftAnchor="10" AnchorPane.rightAnchor="10" AnchorPane.bottomAnchor="10">
         <Label text="Horario de Clases" styleClass="label-titulo"/>
