--- a/src/main/resources/ventanas/verbancopreguntas.fxml
+++ b/src/main/resources/ventanas/verbancopreguntas.fxml
@@ -5,7 +5,7 @@
 <AnchorPane xmlns:fx="http://javafx.com/fxml"
             fx:controller="com.example.bd_edu.controllers.VerBancoPreguntasController"
             prefWidth="800.0" prefHeight="500.0"
-            stylesheets="@estilos.css">
+            stylesheets="@../estilos.css">
 
     <VBox spacing="10"
           AnchorPane.topAnchor="10"
