refactor: unificar diseño de menús y mejorar distribución de botones

--- a/src/main/resources/estilos.css
+++ b/src/main/resources/estilos.css
@@ -8,7 +8,7 @@
 
 /* Fondo y Layout Global */
 .anchor-pane {
-    -fx-background-color: #1e1e1e;  /* Fondo oscuro como en el login */
+    -fx-background-color: #0f2027;  /* Fondo oscuro como en el login */
 }
 
 /* Estilo para los Labels */
