--- a/src/main/resources/ventanas/menudocente.fxml
+++ b/src/main/resources/ventanas/menudocente.fxml
@@ -3,6 +3,7 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
 <AnchorPane xmlns:fx="http://javafx.com/fxml"
@@ -11,26 +12,28 @@
             stylesheets="@../estilos.css"
             styleClass="anchor-pane">
 
-    <!-- Contenedor principal con anclajes -->
     <VBox alignment="CENTER" spacing="20"
           AnchorPane.topAnchor="100.0"
-          AnchorPane.leftAnchor="150.0"
-          AnchorPane.rightAnchor="150.0"
+          AnchorPane.leftAnchor="100.0"
+          AnchorPane.rightAnchor="100.0"
           AnchorPane.bottomAnchor="100.0">
 
-        <!-- Contenedor con fondo degradado y sombra -->
         <VBox spacing="20" alignment="CENTER" styleClass="login-box">
-            <!-- Título centrado -->
             <Label text="Menú Docente" styleClass="label-titulo"/>
 
-            <!-- Botones con estilo similar -->
-            <Button fx:id="crearExamenButton" text="Crear Examen" onAction="#crearExamen" styleClass="button"/>
-            <Button fx:id="agregarPreguntaButton" text="Agregar Pregunta" onAction="#agregarPregunta" styleClass="button"/>
-            <Button fx:id="verEstadisticasButton" text="Ver Estadísticas" onAction="#verEstadisticas" styleClass="button"/>
-            <Button fx:id="configurarExamenButton" text="Configurar Examen" onAction="#configurarExamen" styleClass="button"/>
+            <!-- Botones en dos filas -->
+            <HBox spacing="20" alignment="CENTER">
+                <Button fx:id="crearExamenButton" text="Crear Examen" onAction="#crearExamen" styleClass="button" maxWidth="200" minWidth="200"/>
+                <Button fx:id="agregarPreguntaButton" text="Agregar Pregunta" onAction="#agregarPregunta" styleClass="button" maxWidth="200" minWidth="200"/>
+            </HBox>
 
-            <!-- Botón para regresar (salir) -->
-            <Button fx:id="volverButton" text="Salir" onAction="#volver" styleClass="boton-regresar"/>
+            <HBox spacing="20" alignment="CENTER">
+                <Button fx:id="verEstadisticasButton" text="Ver Estadísticas" onAction="#verEstadisticas" styleClass="button" maxWidth="200" minWidth="200"/>
+                <Button fx:id="configurarExamenButton" text="Configurar Examen" onAction="#configurarExamen" styleClass="button" maxWidth="200" minWidth="200"/>
+            </HBox>
+
+            <Button fx:id="volverButton" text="Salir" onAction="#volver" styleClass="boton-regresar" maxWidth="200" minWidth="200"/>
         </VBox>
+
     </VBox>
 </AnchorPane>
