--- a/src/main/resources/ventanas/crearquiz.fxml
+++ b/src/main/resources/ventanas/crearquiz.fxml
@@ -1,37 +1,56 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Separator?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane xmlns:fx="http://javafx.com/fxml"
-            fx:controller="com.example.bd_edu.controllers.CrearQuizController"
-            prefHeight="500.0" prefWidth="500.0"
-            stylesheets="@../estilos.css">
+<AnchorPane prefHeight="390.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.bd_edu.controllers.CrearExamenController">
+   <children>
+      <Label layoutX="13.0" layoutY="9.0" prefWidth="358.0" text="Crear Nuevo Examen" textAlignment="CENTER" />
+      <Separator layoutX="-11.0" layoutY="38.0" prefWidth="382.0" />
+      <Separator layoutX="371.0" layoutY="-8.0" orientation="VERTICAL" prefHeight="398.0" />
+      <Label layoutX="383.0" layoutY="9.0" prefWidth="199.0" text="Preguntas" textAlignment="CENTER" />
 
-    <VBox spacing="10" AnchorPane.topAnchor="10" AnchorPane.leftAnchor="10" AnchorPane.rightAnchor="10">
-        <Label text="Crear Nuevo Quiz" styleClass="label-titulo"/>
+      <Label layoutX="23.0" layoutY="58.0" text="Nombre Examen" />
+      <TextField fx:id="nombreExamenField" layoutX="23.0" layoutY="75.0" prefWidth="162.0" />
 
-        <TextField fx:id="nombreField" promptText="Nombre del Quiz" styleClass="text-field"/>
-        <TextArea fx:id="descripcionArea" promptText="Descripción" prefHeight="80" styleClass="text-field"/>
-        <ComboBox fx:id="categoriaCombo" promptText="Categoría" styleClass="combo-box"/>
+      <Label layoutX="23.0" layoutY="106.0" text="Descripcion" />
+      <TextArea fx:id="descripcionArea" layoutX="23.0" layoutY="129.0" prefHeight="122.0" prefWidth="162.0" />
 
-        <HBox spacing="10">
-            <Label text="Preguntas totales:"/>
-            <Spinner fx:id="totalPreguntasSpinner" prefWidth="80" styleClass="spinner"/>
-        </HBox>
+      <Label layoutX="208.0" layoutY="58.0" text="Tipo de Examen" />
+      <ChoiceBox fx:id="tipoExamenChoice" layoutX="208.0" layoutY="75.0" prefWidth="150.0" />
 
-        <HBox spacing="10">
-            <Label text="Preguntas a presentar:"/>
-            <Spinner fx:id="preguntasExamenSpinner" prefWidth="80" styleClass="spinner"/>
-        </HBox>
+      <Label layoutX="208.0" layoutY="106.0" text="Tema" />
+      <ChoiceBox fx:id="temaChoice" layoutX="208.0" layoutY="123.0" prefWidth="150.0" />
 
-        <HBox spacing="10">
-            <Label text="Tiempo (min):"/>
-            <Spinner fx:id="tiempoSpinner" prefWidth="80" styleClass="spinner"/>
-        </HBox>
+      <Label layoutX="208.0" layoutY="158.0" text="Cantidad de Preguntas" />
+      <TextField fx:id="cantidadPreguntasField" layoutX="208.0" layoutY="175.0" prefWidth="150.0" />
 
-        <Button text="Crear Quiz" onAction="#crearQuiz" styleClass="button"/>
+      <Label layoutX="208.0" layoutY="208.0" text="Preguntas Estudiantes" />
+      <TextField fx:id="preguntasEstudiantesField" layoutX="208.0" layoutY="225.0" prefWidth="150.0" />
 
-        <Button fx:id="volverButton" text="Regresar" onAction="#volver" styleClass="boton-regresar"/>
-    </VBox>
+      <Button fx:id="modelarExamenButton" layoutX="23.0" layoutY="270.0" onAction="#modelarExamen" text="Agregar Preguntas" />
+      <Button fx:id="crearExamenButton" layoutX="148.0" layoutY="270.0" onAction="#crearExamen" text="Crear Examen" />
+      <Button layoutX="249.0" layoutY="270.0" onAction="#generarPreguntasAutomaticamente" prefHeight="25.0" prefWidth="110.0" text="Generar Examen" />
+
+      <Label layoutX="17.0" layoutY="313.0" prefWidth="358.0" text="Modificar Preguntas" textAlignment="CENTER" />
+      <Separator layoutX="-29.0" layoutY="306.0" prefWidth="402.0" />
+
+      <ChoiceBox fx:id="agregarPreguntaChoice" layoutX="23.0" layoutY="347.0" prefWidth="150.0" />
+      <Button fx:id="agregarPreguntaButton" layoutX="248.0" layoutY="345.0" onAction="#agregarPregunta" text="Agregar Pregunta" />
+      <Button fx:id="eliminarPreguntaButton" layoutX="429.0" layoutY="346.0" onAction="#eliminarPregunta" text="Eliminar Pregunta" />
+
+      <TableView fx:id="tablaPreguntas" layoutX="386.0" layoutY="36.0" prefHeight="294.0" prefWidth="200.0">
+         <columns>
+            <TableColumn fx:id="columnaEnunciado" prefWidth="100" text="Pregunta" />
+            <TableColumn fx:id="columnaTipo" prefWidth="100" text="Tipo" />
+         </columns>
+      </TableView>
+   </children>
 </AnchorPane>
